--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "wt2-backend",
   "version": "1.0.0",
-  "description": "The backend for WT2",
-  "type": "module",
+  "description": "",
   "main": "src/server.js",
+  "type": "module",
+  "author": "Simon Danielsson",
+  "license": "MIT",
   "engines": {
     "node": ">=20.6.0"
   },
@@ -11,18 +13,15 @@
     "start": "node src/server.js",
     "dev": "nodemon --inspect --env-file=.env src/server.js"
   },
-  "private": true,
-  "author": "Simon Danielsson",
-  "license": "MIT",
   "dependencies": {
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.0.4",
+    "morgan": "^1.10.0",
+    "mysql2": "^3.11.5"
   },
   "devDependencies": {
-    "@lnu/eslint-config": "^1.1.10",
+    "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.0.2"
   }
 }
